media-queries.css
/* media queries */
@media (width < 1100px) {
    section.courses-section{
        .courses-grid{
            grid-template-columns: repeat(3, 1fr);
        }
    }
    
}

@media (width < 940px) {
    section.hero-section {
        .header {
            img.logo {
                width: 150px;
            }
        }

        .content {
            height: calc(100vh - 90px);

            .left {
                h1 {
                    font-size: 43px;
                }

                .btn-div {
                    .btn {
                        padding: 10px 20px;
                    }
                }
            }
        }
    }
}

@media (width < 820px) {
    section.hero-section {
        .header {
            .hamburger {
                display: block;
                z-index: 4;
            }

            .navlist {
                position: absolute;
                right: -180px;
                top: 40%;
                flex-direction: column;
                width: 160px;
                text-align: center;
                transition: 0.2s ease-in;
                z-index: 4;

                li {
                    background-color: #1f0fa3;
                    border: 1px solid;
                    box-shadow: 2px 3px #fcb866;

                    &:hover {
                        transform: none;
                    }
                }

            }
        }
    }

    section.why-section {
        .why-grid {
            grid-template-columns: 1fr;
        }
    }

    section.courses-section{
        .courses-grid{
            grid-template-columns: repeat(2, 1fr);
        }
    }
}

@media (width < 700px) {
    section:not(.hero-section) {
        padding-block: 76px;

        h1 {
            font-size: 24px;
            padding: 8px 16px;
            border-radius: 8px;
        }
    }

    section.hero-section {
        .header {
            img.logo {
                width: 120px;
            }

            &.scrolled {
                img.logo {
                    width: 120px;
                }
            }
        }

        .content {
            height: 80vh;
            grid-template-columns: 1fr;
            gap: 32px;
            transform: translateY(10%);

            .left {
                text-align: center;

                h1 {
                    width: 19ch;
                    margin-inline: auto;
                }

                .btn-div {
                    justify-content: center;
                }
            }
        }
    }
}

@media (max-width: 630px) {
    section.why-section {
        .why-grid {
            .why-card {
                .why-card-icon-div {
                    .why-card-icon {
                        font-size: 22px;
                    }
                }

                .why-card-content {
                    p.title {
                        font-size: 22px;
                    }

                    p.description {
                        font-size: 14px;
                    }
                }
            }
        }
    }
}

@media (max-width: 500px) {
    section.hero-section {
        .content {
            .left {
                h1 {
                    font-size: 30px;
                }

                .btn {
                    font-size: 14px;
                }
            }
        }
    }

    section.courses-section{
        .courses-grid{
            grid-template-columns: 1fr;
        }
    }

}

@media (max-width: 364px) {
    :root {
        --menu-toggler-distane: -150px;
    }

    section:not(.hero-section) {
        h1 {
            font-size: 20px;
            padding: 8px 16px;
        }
    }

    section.hero-section {
        .header {
            .navlist {
                width: 140px;
            }
        }

        .content {
            .left {
                h1 {
                    font-size: 26px;
                }
            }
        }
    }

    section.why-section {
        .why-grid {
            .why-card {
                flex-direction: column;
                align-items: center;

                .why-card-icon {
                    font-size: 20px;
                }

                .why-card-content {
                    p.title {
                        font-size: 18px;
                    }

                    p.description {
                        font-size: 12px;
                    }
                }
            }
        }
    }
}

@media (max-width: 364px) {
    :root {
        --menu-toggler-distane: -114px;
    }

    section.hero-section {
        .header {
            .navlist {
                width: fit-content;
            }
        }
    }
}

@media (max-width: 315px) {
    .hamburger.is-active {
        background-color: black;
        padding: 5px;
        border-radius: 50%;
    }

}

